--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input":"src/assets", 
+                "output": "/assets" 
               }
             ],
             "styles": [
@@ -87,7 +88,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input":"src/assets", 
+                "output": "/assets" 
               }
             ],
             "styles": [
@@ -98,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "396289bf-70cc-4632-a345-65891a2ac8b7"
   }
 }
